@@ -1,5 +1,12 @@
 2008-11-01 Josh Kropf <josh@slashdev.ca>
 
+    * RapcTask.java
+      (Define.if, Define.unless): added attributes to conditionally define
+      preprocessor tags added as nested elements of rapc task
+
+
+2008-11-01 Josh Kropf <josh@slashdev.ca>
+
     * RapcTask.java: applied patch by Derek Konigsberg for preprocessor support
       (RapcTask.Define): new nested element class
       (execute): when defines attribute or nested <define> elements are set,
